#99: Use complete path for source files (#108)
* #99: Use complete path for source files