@@ -1,15 +1,14 @@
 package com.exasol.errorcodecrawlermavenplugin;
 
-import com.exasol.errorcodecrawlermavenplugin.config.ErrorCodeConfig;
-import com.exasol.errorcodecrawlermavenplugin.config.ErrorCodeConfigException;
-import com.exasol.errorcodecrawlermavenplugin.config.ErrorCodeConfigReader;
-import com.exasol.errorcodecrawlermavenplugin.crawler.ErrorMessageDeclarationCrawler;
-import com.exasol.errorcodecrawlermavenplugin.validation.ErrorMessageDeclarationValidator;
-import com.exasol.errorcodecrawlermavenplugin.validation.ErrorMessageDeclarationValidatorFactory;
-import com.exasol.errorcodecrawlermavenplugin.writer.ProjectReportWriter;
-import com.exasol.errorreporting.ExaError;
-import com.exsol.errorcodemodel.ErrorCodeReport;
-import com.exsol.errorcodemodel.ErrorMessageDeclaration;
+import static java.util.stream.Collectors.toList;
+
+import java.nio.file.Path;
+import java.util.Collections;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
+
 import org.apache.maven.artifact.DependencyResolutionRequiredException;
 import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.MojoFailureException;
@@ -20,14 +19,16 @@ import org.apache.maven.plugins.annotations.ResolutionScope;
 import org.apache.maven.project.MavenProject;
 import org.codehaus.plexus.util.xml.Xpp3Dom;
 
-import java.nio.file.Path;
-import java.util.Collections;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
-import static java.util.stream.Collectors.toList;
+import com.exasol.errorcodecrawlermavenplugin.config.ErrorCodeConfig;
+import com.exasol.errorcodecrawlermavenplugin.config.ErrorCodeConfigException;
+import com.exasol.errorcodecrawlermavenplugin.config.ErrorCodeConfigReader;
+import com.exasol.errorcodecrawlermavenplugin.crawler.ErrorMessageDeclarationCrawler;
+import com.exasol.errorcodecrawlermavenplugin.validation.ErrorMessageDeclarationValidator;
+import com.exasol.errorcodecrawlermavenplugin.validation.ErrorMessageDeclarationValidatorFactory;
+import com.exasol.errorcodecrawlermavenplugin.writer.ProjectReportWriter;
+import com.exasol.errorreporting.ExaError;
+import com.exsol.errorcodemodel.ErrorCodeReport;
+import com.exsol.errorcodemodel.ErrorMessageDeclaration;
 
 /**
  * This class is the entry point of the plugin.
@@ -38,7 +39,7 @@ import static java.util.stream.Collectors.toList;
 public class ErrorCodeCrawlerMojo extends AbstractMojo {
 
     @Parameter(defaultValue = "${project}", required = true, readonly = true)
-    private MavenProject project;
+    MavenProject project;
 
     // [impl->dsn~skip-execution~1]
     @Parameter(property = "error-code-crawler.skip", defaultValue = "false")
@@ -55,9 +56,9 @@ public class ErrorCodeCrawlerMojo extends AbstractMojo {
 
     // [impl->dsn~src-directories]
     // [impl->dsn~src-directory-override]
-    private List<Path> getSourcePaths() {
+    private List<Path> getSourcePaths(Path rootProjectDir, Path projectDir) {
         if (this.sourcePaths == null || this.sourcePaths.isEmpty()) {
-            return List.of(Path.of("src/main/java"));
+            return List.of(Path.of(rootProjectDir.relativize(projectDir).toString(), "src", "main", "java"));
         } else {
             return this.sourcePaths.stream().map(Path::of).collect(toList());
         }
@@ -89,13 +90,14 @@ public class ErrorCodeCrawlerMojo extends AbstractMojo {
     @Override
     public void execute() throws MojoFailureException {
         if (isEnabled()) {
-            final var projectDir = this.project.getBasedir().toPath();
+            final var projectDir = getProjectDir();
+            final var rootProjectDir = getRootProjectDir(projectDir);
             final ErrorCodeConfig config = readConfig(projectDir);
             final List<Path> classpath = getClasspath();
             getLog().debug("Using classpath " + classpath);
-            final var crawler = new ErrorMessageDeclarationCrawler(projectDir, classpath, getJavaSourceVersion(),
+            final var crawler = new ErrorMessageDeclarationCrawler(rootProjectDir, projectDir, classpath, getJavaSourceVersion(),
                     Objects.requireNonNullElse(this.excludes, Collections.emptyList()));
-            final List<Path> absoluteSourcePaths = getSourcePaths().stream().map(projectDir::resolve).collect(toList());
+            final List<Path> absoluteSourcePaths = getSourcePaths(rootProjectDir, projectDir).stream().map(rootProjectDir::resolve).toList();
             getLog().debug("Crawling " + absoluteSourcePaths.size() + " paths: " + absoluteSourcePaths);
             final var crawlResult = crawler.crawl(absoluteSourcePaths);
             final List<Finding> findings = validateErrorDeclarations(config, crawlResult);
@@ -110,6 +112,14 @@ public class ErrorCodeCrawlerMojo extends AbstractMojo {
                     this.project.getVersion(), errorMessageDeclarations));
             reportResult(errorMessageDeclarations.size(), findings);
         }
+    }
+
+    private Path getProjectDir() {
+        return this.project.getBasedir().toPath();
+    }
+
+    private Path getRootProjectDir(Path projectDir) {
+        return this.project.getParent() == null ? projectDir : projectDir.getParent();
     }
 
     private List<ErrorMessageDeclaration> removeSourcePositions(final List<ErrorMessageDeclaration> declarations) {
